--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');
 
 
 html,
@@ -8,22 +8,25 @@ body {
 }
 
 body {
-    background-color: ghostwhite;
-    font-family: 'Space Grotesk', sans-serif;
-    color: #18453B;
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+    color: #00AF66;
     margin: 0;
     width: 100vw;
     position: relative;
+    font-weight: 500;
+    line-height: 1.2;
 }
 
 a {
-    color: #18453B;
+    color: #00AF66;
+    text-decoration: underline;
 }
 
 a:hover {
-    color: #18453B;
-    background-color: darkorange;
+    color: #1C4220;
     font-style: italic;
+    text-decoration: underline;
 }
 
 p {
@@ -41,18 +44,38 @@ p.home {
 h1 {
     margin: 24px 0 0 0;
     font-size: 3rem;
-    font-family: 'Space Grotesk';
+    font-family: 'Roboto';
 }
 
 h2 {
     margin: 24px 0 0 0;
-    font-size: 2rem;
-    font-family: 'Space Grotesk';
+    font-size: 2.5rem;
+    font-family: 'Roboto';
 }
 
 #header {
     width: 80vw;
     margin: 2vw 2vw;
+}
+
+.footer {
+    width: 80vw;
+    position: fixed;
+    bottom: 0;
+    margin: 2vw 2vw;
+    padding: 3px;
+    color: white;
+    text-align: left;
+}
+
+svg {
+  width: 70px;
+  height: 70px;
+  fill: #00AF66;
+}
+
+svg:hover {
+  fill: #1C4220;
 }
 
 .fadeOut {
